# sids

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  GUIDE.md  LICENSE.md  README.md  SECURITY.md  SHUTDOWN_GUIDE.md  SUPERVISION.md  run-coverage.ps1  run-coverage.sh  sids.config.example.toml  tmp
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
architecture/: README.md  actor-lifecycle.md  actor-system-architecture.md  actor_model_sample.md  emmisary.md  high-level-architecture.md  message-flow.md  sample_sequence.md  scratch-pad.md  streaming-architecture.md  system-overview.md
architecture/archive/: actor-system-architecture.md  class_diagram.md
benches/: actor_benchmarks.rs  streaming_benchmarks.rs
docs/: COVERAGE.md  STABILITY.md
examples/: actor_critic.rs  chatbot.rs  collection.rs  loggers.rs  response_handler_demo.rs  source.rs  streaming_supervision.rs  supervision.rs
src/: actors.rs  config.rs  lib.rs  main.rs  streaming.rs  supervision.rs  supervision_export.rs
src/actors/: actor.rs  actor_ref.rs  actor_system.rs  channel_factory.rs  community.rs  context.rs  error.rs  guardian.rs  messages.rs  mod.rs  officer.rs  props.rs  response_handler.rs
src/actors/community/: collector.rs  generic.rs  source.rs
src/concurrency.rs/: executor.rs
src/config/: error.rs
src/example/: actor_animation.rs
src/streaming/: flow.rs  materializer.rs  sink.rs  source.rs  stream_message.rs  tests.rs
