[package]
name = "sids"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Ryan Deschamps <rdeschamps@conestogac.on.ca>"]
repository = "https://github.com/professor-greebie/sids"
description = "An actor-model concurrency framework providing abstraction over async and blocking actors."
keywords = ["actor-model", "concurrency", "tokio"]
categories = ["asynchronous", "concurrency"]
exclude = ["/architecture"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"]}
trait-variant = "0.1.2"
log = {version = "0.4", features = ["kv"]}
env_logger = "0.11.8"
mockall = "0.13.1"
reqwest = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
async-trait = "0.1"

[features]
streaming = ["reqwest"]
visualize = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

[[bench]]
name = "actor_benchmarks"
harness = false

[[bench]]
name = "streaming_benchmarks"
harness = false
required-features = ["streaming"]
